<resources>
    <string name="app_name">Meal Master</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dailyMeal">Daily Meal Name</string>
    <string name="dailyMealText">Daily Meal Suggested For You</string>
    <string name="categoryField">Category Type</string>
    <string name="avilableCategory">Avilable Categories</string>
    <string name="avilable_ingredient">Avilable Ingrediants</string>
    <string name="avilable_Countries">Avilable Countries</string>
    <string name="ingredientField">Ingrediant Field</string>
    <string name="ingredientName">Ingrediant Name</string>
    <string name="default_web_client_id">1070173307-71ljv4b38g74pbtojoiap0tosvrl803e.apps.googleusercontent.com</string>
    <string name="register">Not Have Account ? register</string>
    <string name="favorites_item">Favorites</string>
    <string name="home_item">Home</string>
    <string name="search_item">Search</string>
    <string name="week_plan_item">Week Plan</string>
    <string name="mealCategoryName">Category Name</string>
    <string name="mealCountryName">Country Name</string>
    <string name="constMeal">" :: Meals"</string>
    <string name="search">Search</string>
    <string name="filterBy">Filter By</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="ingrediants">Ingrediants</string>
    <string name="mealName">Meal Name</string>
    <string name="meal_id">Meal ID</string>
    <string name="instruction">Instruction</string>
    <string name="mealSteps">Meal Steps</string>
    <string name="no_instructions_available">No Instructions Avilable</string>
    <string name="FavoriteMeals">Favorite Meals</string>
    <string name="upload">Upload Data</string>
    <string name="download">Dawnload Data</string>
    <string name="logOut">"Log Out "</string>
    <string name="downloadd">Dawnload Data</string>
    <string name="category_Name">Category Name</string>
    <string name="contry_name">Country Name</string>
    <string name="plannedmeals">Week Planned Meals</string>
    <string name="saturday">SaturDay</string>
    <string name="sunday">SunDay</string>
    <string name="monday">MonDay</string>
    <string name="tuesDay">TuseDay</string>
    <string name="wendsDay">WendsDay</string>
    <string name="thrisDay">ThrisDay</string>
    <string name="friday">FraiDay</string>
    <string name="NONE">NONE</string>
    <string name="plannedMeals">Weak Planned Meals</string>
    <string name="continue_as_guest">Continue AS Guest</string>
    <string name="navigate_as_guest_action">Navigate AS Guest</string>
    <string-array name="days_of_week">
        <item>NONE</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>