<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBFB"
    tools:context=".view.home.homeActivity.HomeFragment">

    <ScrollView
        android:id="@+id/home_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dailyMealCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dailyMealText"
                app:layout_constraintBottom_toTopOf="@+id/categoryRecycler1">

                <ImageView
                    android:id="@+id/dailyMealImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_launcher_background" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="bottom"
                    android:background="#4D070505" />

                <TextView
                    android:id="@+id/dailyMealName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="10sp"
                    android:text="@string/dailyMeal"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/addTo_plan_image_icon"
                    android:layout_width="50dp"
                    android:layout_height="37dp"
                    android:layout_gravity="right"
                    android:paddingRight="10sp"
                    android:src="@drawable/favoriteicon"
                    app:tint="@color/design_default_color_secondary_variant" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/dailyMealText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/dailyMealText"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecycler1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />

            <TextView
                android:id="@+id/avilableIngredians"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/avilable_ingredient"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryRecycler1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avilableIngredians" />

            <TextView
                android:id="@+id/avilableCountriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/avilable_Countries"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/countriesRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avilableCountriesText" />

            <TextView
                android:id="@+id/avilableCategoriyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/avilableCategory"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/no_internet_animation"
        style="@style/LottieAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/no_internet" />

</androidx.constraintlayout.widget.ConstraintLayout>
