<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/meal_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/meal_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="10dp"
                tools:ignore="MissingClass" />

            <ImageView
                android:id="@+id/plan_iconImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/calendertoday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite_iconImage" />

            <ImageView
                android:id="@+id/favorite_iconImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#00BCD4"
                android:src="@drawable/favoriteicon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/meal_cardView"
        app:layout_constraintEnd_toEndOf="@+id/meal_cardView"
        app:layout_constraintStart_toStartOf="@+id/meal_cardView"
        app:layout_constraintTop_toTopOf="@id/meal_details_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/meal_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="12dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="100"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_name_white"
        app:layout_constraintBottom_toTopOf="@id/meals_details_category"
        app:layout_constraintStart_toStartOf="@id/meal_cardView"
        tools:text="@string/mealName" />

    <TextView
        android:id="@+id/meals_details_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="12dp"
        android:text="@string/mealCategoryName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_category_white"
        app:layout_constraintBottom_toBottomOf="@id/meal_cardView"
        app:layout_constraintEnd_toStartOf="@id/meal_detail_country"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/meal_detail_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:text="@string/mealCountryName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_country_white"
        app:layout_constraintBottom_toBottomOf="@id/meals_details_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/meals_details_category"
        app:layout_constraintTop_toTopOf="@id/meals_details_category" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/meals_details_category"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/mealDetailIngrediantText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/ingrediants"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingrediant_detail_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealDetailIngrediantText" />

            <TextView
                android:id="@+id/instructionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/instruction"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingrediant_detail_recycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instruction_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionText" />

            <!-- Add VideoView below the instruction recyclerView -->
            <VideoView
                android:id="@+id/meal_videoView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instruction_recyclerView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
